--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
           }
 
           .myDiv:hover{
-            border-bottom: 0.8rem solid red;
-      color: red;
+            border-bottom: 0.8rem solid #000;
+      color: #000;
       transition: 0.25s ease-in;
       
           }
@@ -283,8 +283,8 @@
           }
 
           .myDiv1:hover{
-            border-bottom: 0.8rem solid rgb(189, 2, 189);
-      color: rgb(189, 2, 189);
+            border-bottom: 0.8rem solid rgb(166, 60, 166);
+      color: rgb(166, 60, 166);
       transition: 0.22s ease-in;
           }
 
@@ -325,8 +325,8 @@
            }
 
           .myDiv3:hover{
-            border-bottom: 0.8rem solid blue;
-      color: blue;
+            border-bottom: 0.8rem solid #fff;
+      color: #fff;
       transition: 0.22s ease-in;
           }
 
