--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 66%;
     height: auto;
-    font-family:  'arial'; 
+    font-family:  'trebuchet ms'; 
     font-size: 1.05rem; 
     color: rgba(13, 13, 13, 0.963);
     line-height: 24.75px;
@@ -796,7 +796,7 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 90%;
     height: auto;
-    font-family:  'arial'; 
+    font-family:  'trebuchet ms'; 
     font-size: 1.05rem; 
     color: rgba(13, 13, 13, 0.963);
     line-height: 24.75px;
@@ -974,7 +974,7 @@ height: auto;
 .TXT{
   width: 100%;
   height: auto;
-    font-family:  'arial'; 
+    font-family:  'trebuchet ms'; 
     font-size: 1.05rem; 
     color: rgba(13, 13, 13, 0.866);
     line-height: 24.75px;
@@ -990,7 +990,7 @@ height: auto;
     text-align: justify;
     width: 65%;
     height: 790px;
-    font-family:  'arial'; 
+    font-family:  'trebuchet ms'; 
     font-size: 1.05rem; 
     color: rgba(13, 13, 13, 0.866);
     line-height: 24.75px;
@@ -1004,7 +1004,7 @@ height: auto;
   justify-items: center;
   width: 100%;
   height: 240px;
-  font-family:  'arial'; 
+  font-family:  'trebuchet ms'; 
   font-size: 1.05rem; 
   color: rgba(13, 13, 13, 0.866);
   line-height: 25px;
@@ -1026,6 +1026,7 @@ height: auto;
   height: auto;
   margin-top: 2rem;
   font-size: 1.05rem;
+  font-family: 'trebuchet ms';
 }
 
 .Avenue{
@@ -1557,6 +1558,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <br>
         <br>
         Nous connaissons tous l'importance de l'éducation comme un puissant outil pour tout humain. En effet le but premier de Tiki N'Yiki est de permettre aux enfants handicapés d'accéder à une bonne éducation et avoir des opportunities dont ils méritent malgré leur handicap. 
+        <br>
         <br>
         <br>
         <b style="color:#ff0a06">Pour ce faire l'inclusion doit être encouragée et soutenue. </b>
