--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 2rem 0.2px #ffffff07;
-                 border-bottom: 4.6rem solid #0ab9ff;  
+                 box-shadow: 0 -1px 2rem 0.2px #6a6a6a89;
+                 border-bottom: 4.6rem solid #fff;  
           }
           
 
@@ -462,7 +462,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: #e4e4e4d9;
+    background: #fff;
     justify-content: center;
     align-items: center;
     padding: 10px;
