--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 2rem 0.2px #6a6a6a89;
+                 box-shadow: 0 -1px 1.5rem 0.2px #60606075;
                  border-bottom: 4.6rem solid #fff;  
           }
           
@@ -229,7 +229,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 159px; 
-            background: #e4e4e4d9;
+            background: #f6f6f6;
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
@@ -304,8 +304,8 @@
             }
 
           .myDiv2:hover{
-            border-bottom: 0.8rem solid yellow;
-      color: yellow;
+            border-bottom: 0.8rem solid red;
+      color: red;
       transition: 0.22s ease-in;
           }
 
@@ -325,8 +325,8 @@
            }
 
           .myDiv3:hover{
-            border-bottom: 0.8rem solid #fff;
-      color: #fff;
+            border-bottom: 0.8rem solid rgba(0, 0, 139, 0.771);
+      color: rgba(0, 0, 139, 0.771);
       transition: 0.22s ease-in;
           }
 
@@ -346,8 +346,8 @@
             }
 
           .myDiv6:hover{
-            border-bottom: 0.8rem solid greenyellow;
-      color: greenyellow;
+            border-bottom: 0.8rem solid green;
+      color: green;
       transition: 0.22s ease-in;
           }
 
