--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 97%;
   font-family: 'arial black';
   font-size: 15px; 
-  color: #2352a3f9;
+  color: #2557aff9;
   padding: 5px;
-  margin-top: -0.45rem;
+  margin-top: -0.5rem;
 }
 
 .TEM:hover{
-  background:-webkit-linear-gradient(rgba(223, 223, 2, 0.964) 30%,rgb(249, 249, 0) 70%) ;
-  transition: 0.6s ease;
+  background:-webkit-linear-gradient(rgb(255, 108, 55) 0%, #ff0 100%) ;
+  transition: 0.45s ease;
   color: #00f;
   border-top-left-radius: 49%;
   border-bottom-left-radius: 49%;
@@ -190,7 +190,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1.5px 1rem 0.2px #60606075;
+                 box-shadow: 0 -1.25px 1rem 0.2px #60606084;
                  border-bottom: 4.6rem solid #fff;  
           }
           
