--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1.25px 1rem 0.2px #60606084;
+                 box-shadow: 0 -1.25px 1rem 0.2px #6b6b6b78;
                  border-bottom: 4.6rem solid #fff;  
           }
           
@@ -229,7 +229,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 140px; 
-            background: #f7f7f7;
+            background: #e2e2e2e5;
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
