--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </div>
 
   <div>
-    <p style="color:#0274fff9; font-size: 17.5px; font-family: Arial, Helvetica, sans-serif; text-align: justify; padding: 10px; line-height: 23px;">
+    <p style="color:#0274fff9; font-size: 17px; font-family: 'trebuchet ms', Helvetica, sans-serif; text-align: justify; padding: 10px; line-height: 22px;">
       Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un centre adapté nommé Accadémie Tiki N'Yiki.
       Cette accadémie sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer un bon fonctionnement. Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
        pour la mobilité en cas de nécessité.
