--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #1d1d1d;
+                 background: #000;
                  width: 100%;
                  height: 99px;
                  object-fit: cover;
@@ -203,9 +203,9 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  width: 61px;
+  width: 62px;
   height: 61px;
-  font-size: 9.3px;
+  font-size: 9px;
   font-family: 'arial black';
   border-radius: 50%;
   background: -webkit-linear-gradient(#ff3006 0%,#ff0 100%); 
