--- a/index.html
+++ b/index.html
@@ -1356,7 +1356,7 @@ function myFunction() {
         
 
     <p style="margin-top: -4px;">Literallement traduit, Tiki N'Yiki signifie de s'appuyer sur quelqu'un-e ou sur quelque chose afin de se lever. Mais à travers un angle philosophique, 
-      Tiki N'Yiki veut dire que chaque personne a besoin de soutien quelque soit la nature pour se construire, s'élever et s'affirmer. Cette philosophie n'écarte en aucun cas la personne handicapée parce que <b> le handicap n'est pas une fatalité.</b>
+      Tiki N'Yiki veut dire que chaque personne a besoin d'un appui soit sur quelqu'un-e ou sur quelque chose pour se faire, pour se construire, pour s'éléver et/ou pour s'affirmer. Cette philosophie inclut aussi la personne handicapée parce que <b> le handicap n'est pas une fatalité.</b>
     </p>
       <hr style="color: rgb(13, 31, 136); justify-self: center;"> 
            
