--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@ animation: auto 12s infinite ease-in;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15.45px;
   line-height: 20px;
-  color: rgb(16, 41, 182);
+  color: rgb(71, 71, 71);
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
@@ -1883,7 +1883,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <div class="kgp">
         <img src="https://www.zupimages.net/up/23/22/znug.jpg" alt="At Saint-Côme-Quebec">
       <figure>
-        <figcaption style="font-family: 'verdana'; font-size: 13px; color: rgba(0, 69, 187, 0.996); margin-top: 0.5rem;">
+        <figcaption style="font-family: 'verdana'; font-size: 13px; color: rgb(71, 71, 71); margin-top: 0.5rem;">
         Gabriel à <a href="https://www.stcomelanaudiere.ca/" target="_blank"> Saint-Côme </a>* Lanaudière 
         <br>
         [Juin 2023 Quebec]
