--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 1.25px 1rem 0.2px #6f6f6f78;
+                 box-shadow: 0 1px 1rem 0.2px #6f6f6f78;
                  border-bottom: 4.6rem solid #fff;  
           }
           
@@ -462,7 +462,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: #fff;
+    background: #000;
     justify-content: center;
     align-items: center;
     padding: 10px;
@@ -493,7 +493,7 @@ hr{
     justify-content: center;
     justify-items: center;
     background: #fff;
-    width: 91.99%;
+    width: 90%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
@@ -501,7 +501,7 @@ hr{
     text-align: left;
     padding-top: 5rem; 
     opacity: 0.98;
-    margin-top: -0.6rem;
+    margin-top: 1rem;
 }
 .content1 a:hover{
     color: red;
