--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ hr{
     justify-content: center;
     justify-items: center;
     background: #fff;
-    width: 95%;
+    width: 80%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(51, 51, 51);
@@ -727,7 +727,7 @@ animation: auto 12s infinite ease-in;
     justify-items: left;
     justify-content: center;
     text-align: justify;
-    width: 66%;
+    width: 74%;
     height: auto;
     font-family:  'trebuchet ms'; 
     font-size: 1.05rem; 
@@ -794,7 +794,7 @@ animation: auto 12s infinite ease-in;
     justify-items: left;
     justify-content: center;
     text-align: justify;
-    width: 90%;
+    width: 101%;
     height: auto;
     font-family:  'trebuchet ms'; 
     font-size: 1.05rem; 
@@ -804,7 +804,7 @@ animation: auto 12s infinite ease-in;
 }
 
 .CRT2{
-  width: 90%;
+  width: 101%;
   display: grid;
   grid-template-columns: 0.8fr 1.5fr;
   column-gap: 2rem;
@@ -908,7 +908,7 @@ animation: auto 12s infinite ease-in;
 .Ecole{
   display: grid;
   grid-template-columns: 0.8fr 1.2fr;
-  column-gap: 1rem;
+  column-gap: 1.5rem;
   justify-content: center;
   justify-items: center;  
   width: 100%; 
@@ -988,7 +988,7 @@ height: auto;
     justify-items: center;
     justify-content: center;
     text-align: justify;
-    width: 65%;
+    width: 74%;
     height: 790px;
     font-family:  'trebuchet ms'; 
     font-size: 1.05rem; 
@@ -1450,7 +1450,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
   <img src="https://www.zupimages.net/up/23/23/gwuk.png" alt="Percussion djembé">
 <figure>
 <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 13px; text-align: left;">
-  Oiseaux au soleil couchant
+  Soleil couchant
 </figcaption>
 </figure>
 </div>
