--- a/index.html
+++ b/index.html
@@ -1216,7 +1216,7 @@ function myFunction() {
   <div style="display: grid; justify-content: center; justify-items: center; color: #2d34b5; font-family: 'arial black'; font-size: 27px; text-align: center; margin-top: 1rem;">
   Bienvenue ! Ce site web est en développement. 
 <br>
-  Merci pour votre compréhension ! Bonne Visite !</p>
+  Merci pour la compréhension ! Bonne Visite !</p>
 </div>
 
 </div>
