--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -2px 0.5rem 0.2px #27272742;
-                 border-bottom: 4.6rem solid #fff;  
+                 box-shadow: 0 2px 0.5rem 0.1px #24242442;
+                 border-bottom: 4.6rem solid #fbfbfbfe;  
           }
           
 
