--- a/index.html
+++ b/index.html
@@ -190,8 +190,10 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 2px 0.5rem 0.1px #24242442;
-                 border-bottom: 4.6rem solid #fbfbfbfe;  
+                 box-shadow: 0 0.45px 0.5rem 0.1px #32323229;
+                 border-bottom: 4.6rem solid #fff;  
+                 border-top-left-radius: 2rem;
+                 border-top-right-radius: 2rem;
           }
           
 
@@ -1160,7 +1162,7 @@ function myFunction() {
 
             <div class="Unify"> 
 
-        <a href="#" target="blank">
+        <a href="https:tikiyiki.github.io/bu" target="blank">
         <div class="myDiv">
           <b>Tiki N'Yiki</b>
         </div>
@@ -1873,13 +1875,12 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       En 2012, Gabriel a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour sa contribution au développement et l'épanouissement des personnes handicapées de sa localité.
                       <br>
                       <br>
-                       Gabriel apprend les codes informatiques pour mieux développer ce site web afin de présenter sa vision pour Tiki N'Yiki. 
-                      Il est aussi un passionné de photographie, de lecture, d'histoire, de géographie, d'architecture, de football (soccer) et de hockey sur glace. 
+                      En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le volet EDUCATION ont été interrompues mais vont être redéfinies si les conditions sont réunies. 
                       <br>
                       <br>
-                      En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le volet EDUCATION ont été interrompues mais vont être redéfinies si les conditions sont réunies. Présentement résident permanent
-                     Canadien, il se reconstruit une nouvelle vie. Néanmoins Gabriel veut créer une fondation dont le but est de supporter vigoureusement l'éducation et l'inclusion sociale des enfants handicapés car ce sera un moyen de leur créer des opportunités pour mieux s'intégrer dans leurs communautés respectives dans le futur <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
-                     
+                      Présentement résident permanent Canadien, il se reconstruit une nouvelle vie en apprennant les codes informatiques pour mieux développer ce site web afin de présenter sa vision pour Tiki N'Yiki. 
+                     Néanmoins Gabriel veut créer une fondation dont le but est de supporter vigoureusement l'éducation et l'inclusion sociale des enfants handicapés car ce sera un moyen de leur créer des opportunités pour mieux s'intégrer dans leurs communautés respectives dans le futur <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
+                     Gabriel est passionné de photographie, d'histoire, de géographie, d'architecture, de football (soccer) et de hockey sur glace.
                     </p>      
       </div>
 
