--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                  position: sticky;
                  box-shadow: 0 0.45px 0.5rem 0.1px #32323229;
                  border-bottom: 4.6rem solid #fff;  
-                 border-top-left-radius: 2rem;
-                 border-top-right-radius: 2rem;
+                 border-top-left-radius: 1.9rem;
+                 border-top-right-radius: 1.9rem;
           }
           
 
@@ -1868,18 +1868,23 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                     
                         La vision de Tiki N'Yiki a pour promoteur Gabriel lui-même étant une personne à mobilité réduite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
                       Fervent défenseur des droits de personnes handicapées, il s'est engagé et a travaillé dans plusieurs associations pour l'éducation,
-                       la promotion et la défense des personnes handicapées dont les enfants. Il a été un des membres fondateurs de l'association PAAS NEERE à Ziniare.</a> Il y a enseigné des enfants handicapés et orphelins, animé des séances de sensibilisation avec pour thème focal "Handicap et Inclusion Sociale" non seulement avec des enfants, des adolescents 
+                       la promotion et la défense des personnes handicapées dont les enfants. 
+                       <br>
+                       </a> Il y a enseigné des enfants handicapés et orphelins, animé des séances de sensibilisation avec pour thème focal "Handicap et Inclusion Sociale" non seulement avec des enfants, des adolescents 
                        mais aussi avec des ainés dans son pays d'origine le Burkina Faso. 
                        <br>En outre pendant ses voyages en Europe il a donné des conférences en Suisse et en Allemagne sur l'association PAAS NEERE et son impact à travers les personnes handicapées de la localité.
                       <br>
-                      En 2012, Gabriel a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour sa contribution au développement et l'épanouissement des personnes handicapées de sa localité.
                       <br>
+                      En 2006 il a été un des membres fondateurs de l'association PAAS NEERE.
+                      <br>
+                      En 2012, Gabriel a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour sa contribution au développement et l'épanouissement des personnes handicapées de sa région.
                       <br>
                       En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le volet EDUCATION ont été interrompues mais vont être redéfinies si les conditions sont réunies. 
                       <br>
                       <br>
-                      Présentement résident permanent Canadien, il se reconstruit une nouvelle vie en apprennant les codes informatiques pour mieux développer ce site web afin de présenter sa vision pour Tiki N'Yiki. 
-                     Néanmoins Gabriel veut créer une fondation dont le but est de supporter vigoureusement l'éducation et l'inclusion sociale des enfants handicapés car ce sera un moyen de leur créer des opportunités pour mieux s'intégrer dans leurs communautés respectives dans le futur <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
+                      Présentement résident permanent Canadien, il se reconstruit une nouvelle vie. Entre autres, il apprend à écrire du code informatique tout en souhaitant se former pour mieux développer ce site web et présenter sa vision pour Tiki N'Yiki. 
+                      <br>
+                      Néanmoins Gabriel veut créer une fondation dont le but est de supporter vigoureusement l'éducation et l'inclusion sociale des enfants handicapés car ce sera un moyen de leur créer des opportunités pour mieux s'intégrer dans leurs communautés respectives dans le futur <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
                      Gabriel est passionné de photographie, d'histoire, de géographie, d'architecture, de football (soccer) et de hockey sur glace.
                     </p>      
       </div>
