--- a/index.html
+++ b/index.html
@@ -1426,8 +1426,8 @@ function myFunction() {
         <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'acceptation et d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré la différence mais en jouissant de leurs droits.
          
          <br>
-         En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe du fait de la négligence, de l'exclusion dont elles sont victimes. Si elles vivent exclues de la société comme une île au milieu d'un océan très loin de la terre ferme sans aucune connection, il sera très difficile de rencontrer des opportunités. 
-         Le fait que des gens qui devraient être les premiers à être soutenus, se retrouvent complètement oubliés et relégués aux rangs derniers, est non seulement une erreur sociale mais indique l'état des mentalités, l'environnement peu inclusif par rapport à la différence. 
+         En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe. <a href="https://lepays.bf/personnes-handicapees-au-burkina-avec-eux-nous-avons-parle-exclusion-discrimination-frustration-sexe/" target="_blank">Les fréquentes discriminations et l'exclusion les rongent au quotidien</a>. Alors si elles vivent exclues de la société comme une île au milieu d'un océan très loin de la terre ferme sans aucune connection, il leur sera difficile de rencontrer des opportunités afin de réaliser. 
+         Le fait que des gens qui devraient être les premiers à être soutenus, se retrouvent complètement oubliés et relégués aux rangs derniers, est non seulement horrible mais indique l'état des mentalités et l'environnement exclusif vis-à-vis de la différence. 
 <br>
 <br>
 Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barrières afin que toute personne handicapée puisse être mieux inclue, son droit respecté et sa vie facilitée sur un processus progressif et positif plûtot que la peur et les discriminations vécues par un grand nombre. 
