--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@ function myFunction() {
 
             <div class="Unify"> 
 
-        <a href="tikiyiki.github.io/bu/" target="blank">
+        <a href="https://tikiyiki.github.io/bu/" target="blank">
         <div class="myDiv">
           <b>Tiki N'Yiki</b>
         </div>
