--- a/index.html
+++ b/index.html
@@ -78,23 +78,23 @@
   justify-content: center;
   align-items: center;
   width: 97%;
-  font-family: 'arial black';
-  font-size: 15px; 
-  color: #2557aff9;
+  font-family: 'trebuchet ms';
+  font-size: 13px; 
+  color: #000;
   padding: 5px;
   margin-top: -0.85rem;
 }
 
 .TEM:hover{
   background:-webkit-linear-gradient(rgb(255, 108, 55) 0%, #ff0 100%) ;
-  transition: 0.45s ease;
+  transition: 0.45s linear;
   color: #00f;
   border-top-left-radius: 49%;
   border-bottom-left-radius: 49%;
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
   font-family: 'arial black';
-  font-size: 15px; 
+  font-size: 13px; 
   padding: 5px;
 }
     .Translator{
@@ -190,10 +190,10 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.45px 0.5rem 0.1px #32323229;
-                 border-bottom: 4.6rem solid #fff;  
-                 border-top-left-radius: 1.9rem;
-                 border-top-right-radius: 1.9rem;
+                 box-shadow: 0 0.45px 0.65rem 0.1px #2c2c2c29;
+                 border-bottom: 4.55rem solid #fdfdfdfd;  
+                 border-top-left-radius: 1.95rem;
+                 border-top-right-radius: 1.95rem;
           }
           
 
@@ -231,7 +231,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 140px; 
-            background: #eaeaeae5;
+            background: #e7e7e7ed;
             color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
