--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #000;
+                 background: #000000e7;
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
@@ -464,7 +464,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: #000;
+    background: #000000e7;
     justify-content: center;
     align-items: center;
     padding: 10px;
