--- a/index.html
+++ b/index.html
@@ -1866,12 +1866,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       
                       <br>
                     
-                        La vision de Tiki N'Yiki a pour promoteur Gabriel lui-même étant une personne à mobilité réduite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
+                        La vision de Tiki N'Yiki a pour promoteur Gabriel lui-même étant une personne à mobilité réduite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
                       Fervent défenseur des droits de personnes handicapées, il s'est engagé et a travaillé dans plusieurs associations pour l'éducation,
                        la promotion et la défense des personnes handicapées dont les enfants. 
                        <br>
-                       </a> Il y a enseigné des enfants handicapés et orphelins, animé des séances de sensibilisation avec pour thème focal "Handicap et Inclusion Sociale" non seulement avec des enfants, des adolescents 
-                       mais aussi avec des ainés dans son pays d'origine le Burkina Faso. 
+                       </a> Il y a enseigné des enfants handicapés et orphelins, animé des séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale"
                        <br>En outre pendant ses voyages en Europe il a donné des conférences en Suisse et en Allemagne sur l'association PAAS NEERE et son impact à travers les personnes handicapées de la localité.
                       <br>
                       <br>
