--- a/index.html
+++ b/index.html
@@ -1516,15 +1516,19 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
       </strong>
     </span>
 <br>
-<br>Vu les innombrables défis sociaux dont les barrières sociales, le manque d'infrastructures et de services adaptés et adéquats, vu les discriminations recurrents, il est sans doute évident que les personnes handicapées ne sont pas prises en priorité et sont ignorées. 
+<br><img src="https://zupimages.net/up/22/31/z42x.jpg" style="width: 100%; height: auto; alt: Celebrating Christmas in Africa">
+Vu les innombrables défis sociaux dont les barrières sociales, le manque d'infrastructures et de services adaptés et adéquats, vu les discriminations recurrents, il est sans doute évident que les personnes handicapées ne sont pas prises en priorité et sont ignorées. 
 <br>  
         <br> Elles n'ont pas la vie facile et doivent s'activer plus fort pour réaliser leurs rêves. Et c'est débile 
-que les gouvernements font peu de choses pour les aider financièrement en termes de donner un chèque mensuel aux personnes qui ne peuvent pas travailler. 
+que les gouvernements font peu de choses pour les aider financièrement en termes de donner un chèque mensuel aux personnes qui ne peuvent pas travailler.  
+
 <br>  
         
 Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin de rêver dans le futur. 
         <br><br>
-         Dans certaines familles il n'y a aucun doute que des enfants handicapés ne soient pas toujours privilégiés par rapport aux enfants dits nornaux. La priorité étant portée sur les enfants dits normaux plutôt que l'enfant handicapé. Dans des pires cas l'enfant handicapé est considéré comme inutile voire un fardeau. Mais en agissant de la sorte les parents, eux-mêmes discriminent leurs propres enfants sur la base de leurs handicaps. C'est une situation dangereuse pour ces enfants handicapés qui risquent de faire face à une suppression de leurs propres droits par leurs propres parents.  
+         Dans certaines familles il n'y a aucun doute que des enfants handicapés ne soient pas toujours privilégiés par rapport aux enfants dits nornaux. La priorité étant portée sur les enfants dits normaux plutôt que l'enfant handicapé. 
+         Dans des pires cas l'enfant handicapé est considéré comme inutile voire un fardeau. Mais en agissant de la sorte les parents, eux-mêmes discriminent leurs propres enfants sur la base de leurs handicaps. C'est une situation dangereuse 
+         pour ces enfants handicapés qui risquent de faire face à une suppression de leurs propres droits par leurs propres parents.  
         <br>
         <hr style="color: rgba(239, 54, 7, 0.977); justify-self: center;"> 
         <b style="color:rgba(239, 54, 7, 0.977); font-size: 23px; font-family: georgia;"> Construction de l'Accadémie Tiki N'Yiki</b> 
