--- a/index.html
+++ b/index.html
@@ -1516,7 +1516,15 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
       </strong>
     </span>
 <br>
-<br><img src="https://zupimages.net/up/22/31/z42x.jpg" style="width: 100%; height: auto; alt: Celebrating Christmas in Africa">
+<br>
+
+<img src="https://zupimages.net/up/22/31/z42x.jpg" style="width: 117.5%; height: auto">
+<figure>
+<figcaption style="font-family: arial; font-size: 14px; color: #323232f4; margin-top: -15px;">
+  Noël organisé par Tiki N'Yiki pour des enfants du quartier à Ziniaré
+</figcaption>
+</figure>
+<br>
 Vu les innombrables défis sociaux dont les barrières sociales, le manque d'infrastructures et de services adaptés et adéquats, vu les discriminations recurrents, il est sans doute évident que les personnes handicapées ne sont pas prises en priorité et sont ignorées. 
 <br>  
         <br> Elles n'ont pas la vie facile et doivent s'activer plus fort pour réaliser leurs rêves. Et c'est débile 
