--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@ animation: auto 12s infinite ease-in;
   font-family: 'verdana';
   font-size: 13.5px;
   line-height: 21px;
-  color: rgb(63, 63, 63);
+  color: rgba(18, 18, 18, 0.958);
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
