--- a/index.html
+++ b/index.html
@@ -1518,7 +1518,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <br>
 <br>
 
-<img src="https://zupimages.net/up/22/31/z42x.jpg" style="width: 117.5%; height: auto">
+<img src="https://zupimages.net/up/22/31/z42x.jpg" style="width: 108%; height: auto; justify-self: center;">
 <figure>
 <figcaption style="font-family: arial; font-size: 14px; color: #323232f4; margin-top: -15px;">
   Noël organisé par Tiki N'Yiki pour des enfants du quartier à Ziniaré
