--- a/index.html
+++ b/index.html
@@ -744,13 +744,28 @@ animation: auto 12s infinite ease-in;
   background: #fff;
 }
 
+.Noel{
+  display: grid;
+  grid-template-columns: 0.5fr 1.5fr;
+  justify-content: space-between;
+  column-gap: 1rem;
+  justify-items: center;
+  width: 100%;
+  height: auto;
+}
+
+.Noel img{
+  width: 100%;
+  height: auto;
+}
+
 .kptr{
   display: grid;
   grid-template-columns: 1.15fr 0.85fr;
   column-gap: 1rem;
   justify-items: center;
   justify-content: space-between;
-  width: 73.5%;
+  width: 74%;
   height: auto;
 }
 
@@ -1516,15 +1531,27 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
       </strong>
     </span>
 <br>
-<br>
+<div class="NL">
 
-<img src="https://zupimages.net/up/22/31/z42x.jpg" style="width: 108%; height: auto; justify-self: center;">
+  <div class="Noel">
+    <div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 25px; color:rgba(102, 102, 102, 0.945)">
+      Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organise un arbre de Noël pendant lequel
+      les enfants sont invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
+      recueillir leurs propositions de réponses. 
+    </div>
+  <div>
+<img src="https://zupimages.net/up/22/31/z42x.jpg">
 <figure>
-<figcaption style="font-family: arial; font-size: 14px; color: #017ffe; margin-top: -15px;">
-  Un noël organisé par Tiki N'Yiki
+<figcaption style="font-family: 'arial black'; font-size: 15px; color: #198dc8;">
+ Noël 2016 organisé par Tiki N'Yiki au profit des enfants
 </figcaption>
 </figure>
-<br>
+</div>
+
+</div>
+
+</div>
+
 Vu les innombrables défis sociaux dont les barrières sociales, le manque d'infrastructures et de services adaptés et adéquats, vu les discriminations recurrents, il est sans doute évident que les personnes handicapées ne sont pas prises en priorité et sont ignorées. 
 <br>  
         <br> Elles n'ont pas la vie facile et doivent s'activer plus fort pour réaliser leurs rêves. Et c'est débile 
