--- a/index.html
+++ b/index.html
@@ -1535,9 +1535,9 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 
   <div class="Noel">
     <div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 25px; color:rgba(102, 102, 102, 0.945)">
-      Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organise un arbre de Noël pendant lequel
-      les enfants sont invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
-      recueillir leurs propositions de réponses. 
+      Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki a organisé cet arbre de Noël pendant lequel
+      les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
+      recueillir leurs réponses respectives. 
     </div>
   <div>
 <img src="https://zupimages.net/up/22/31/z42x.jpg">
