--- a/index.html
+++ b/index.html
@@ -1387,15 +1387,17 @@ function myFunction() {
            
             <div class="CRT1">
             
-        Le Burkina Faso ou pays des hommes intègres est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de 
-        <em style="color: orangered">274.220 kilomètres carrés <a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" target="_blank">[Sources: Données 2020 de la Banque Mondiale] </a>avec une population approximativement égale à 23.300.000 habitants <a href="https://www.unfpa.org/data/world-population/BF" target="_blank"> [Sources: UNFPA]</a>. Il partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin. 
-          <br> 
+        Le Burkina Faso ou pays des hommes intègres est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de :
+        <br>
+        <br>
+        <em style="color: orangered">274.220 kilomètres carrés <a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" target="_blank">[Sources: Données 2020 de la Banque Mondiale] </a>avec une population approximativement égale à 23.300.000 habitants <a href="https://www.unfpa.org/data/world-population/BF" target="_blank"> [Sources: UNFPA]</a>. Il partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.  
         </em>  
+        <br>
+        <br>
         Il bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage.
-        Heureusement elle se diversifie à travers d'autres secteurs comme les services et le secteur des nouvelles technologies. 
-        <br>  
+        Heureusement elle se diversifie à travers d'autres secteurs comme les services et le secteur des nouvelles technologies.  
         <br> 
-        Par contre l'économie reste fortement impactée par une crise sécuritaire qui sécoue la sous-région y compris le Mali et le Niger dont il partage des frontières communes et le tout dans une réalité d'inflation globale. Ce qui rend incertain les lendemains pour de nombreux Burkinabès surtout les déplacés internes.     
+        Par ailleurs son économie reste fortement impactée par une crise sécuritaire qui sécoue la sous-région y compris le Mali et le Niger dont il partage des frontières communes et le tout dans une réalité d'inflation globale. Ce qui rend incertain les lendemains pour de nombreux Burkinabès surtout les déplacés internes.     
         <br>  
         <br>     
         Malgré une population croissante d'à peu près 2 millions de personnes handicapées causées soit par la poliomyétlie (Polio), soit par d'autres maladies, soit par la vieillesse ou soit par de quelconques accidents, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
