--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
     <link rel="stylesheets" type="text/css" href="_css/style.css_" media="all">
     <link rel="stylesheets" href="flexbox" media="all">
     <link rel="javascript" type="text/javascript" href="js.main" media="all">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet"> 
+    @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); 
     <style> 
 
 *{box-sizing: border-box;
@@ -731,10 +726,10 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 74%;
     height: auto;
-    font-family:  'trebuchet ms'; 
-    font-size: 1.05rem; 
-    color: rgba(13, 13, 13, 0.963);
-    line-height: 25px;
+    font-family: 'Inter' sans sherif;
+    font-size: 17.5px; 
+    color: rgba(11, 11, 11, 0.983);
+    line-height: 30px;
     padding: 10px;
     word-spacing: 1px;
 }
@@ -777,6 +772,7 @@ animation: auto 12s infinite ease-in;
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
+  font-family: 'Inter' sans sherif;
 }
 
 .kgp{
@@ -813,11 +809,11 @@ animation: auto 12s infinite ease-in;
     text-align: justify;
     width: 101%;
     height: auto;
-    font-family:  'trebuchet ms'; 
-    font-size: 1.05rem; 
-    color: rgba(13, 13, 13, 0.963);
-    line-height: 25px;
+    font-size: 17.5px; 
+    color: rgba(11, 11, 11, 0.983);
+    line-height: 30px;
     word-spacing: 1px;
+    font-family: 'Inter' sans sherif;
 }
 
 .CRT2{
@@ -991,10 +987,10 @@ height: auto;
 .TXT{
   width: 100%;
   height: auto;
-    font-family:  'trebuchet ms'; 
-    font-size: 1.05rem; 
-    color: rgba(13, 13, 13, 0.866);
-    line-height: 25px;
+  font-size: 17.5px; 
+    color: rgba(11, 11, 11, 0.983);
+    line-height: 30px;
+    font-family: 'Inter' sans sherif;
     text-align: justify;
 }
 
@@ -1006,11 +1002,10 @@ height: auto;
     justify-content: center;
     text-align: justify;
     width: 74%;
-    height: 790px;
-    font-family:  'trebuchet ms'; 
-    font-size: 1.05rem; 
-    color: rgba(13, 13, 13, 0.866);
-    line-height: 24.75px;
+    height: 875px;
+    font-size: 17.5px; 
+    color: rgba(11, 11, 11, 0.983);
+    line-height: 30px;
 }
 
 .Healthy{
@@ -1021,10 +1016,10 @@ height: auto;
   justify-items: center;
   width: 100%;
   height: 240px;
-  font-family:  'trebuchet ms'; 
-  font-size: 1.05rem; 
-  color: rgba(13, 13, 13, 0.866);
-  line-height: 25px;
+  font-size: 17.5px; 
+  color: rgba(11, 11, 11, 0.983);
+  line-height: 30px;
+  font-family: 'Inter' sans sherif;
 }
 
 .Healthy img{
@@ -1042,8 +1037,10 @@ height: auto;
   width: 100%;
   height: auto;
   margin-top: 2rem;
-  font-size: 1.05rem;
-  font-family: 'trebuchet ms';
+  font-size: 17.5px; 
+  color: rgba(11, 11, 11, 0.983);
+  line-height: 30px;
+  font-family: 'Inter' sans sherif;
 }
 
 .Avenue{
@@ -1516,14 +1513,13 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
     </span>
     
   <p>
-    <br>Dans le domaine de l'éducation combien d'établissements specialisés sont construits pour faciliter les études des personnes handicapées ne pouvant pas s'inscrire et s'instruire dans les établissements dits ordinaires au Burkina Faso ? 
+    <br>Dans le domaine de l'éducation combien d'établissements specialisés sont construits pour faciliter les études des personnes handicapées ne pouvant pas s'inscrire et s'instruire dans les établissements dits ordinaires au Burkina Faso? 
     <br>  
-    Combien d'établissements scolaires et universitaires publics ou privés, d'espaces publics et administratifs, de lieux de culte, de centres d'achat, culturels ou sportifs sont equipés de rampes pour favoriser une meilleure accessibilité des personnes handicapées ? 
+    Combien d'établissements scolaires et universitaires publics ou privés, d'espaces publics et administratifs, de lieux de culte, de centres d'achat, culturels ou sportifs sont equipés de rampes pour favoriser une meilleure accessibilité des personnes handicapées? 
     <br>  
-    <br> Quel quota est réservé dans les autres concours aux personnes handicapées qui ne peuvent pas prendre part à certains concours publics de l'état tout simplement parce que l'éducation physique est une obligation ? <br>  
-        <br> 
-        Il est difficile de dire exactement 
-    des chiffres illustratifs mais l'indifférence de la société est flagrante et inquiétante. Si bien que même sans chiffres, de par les comportements et les agissements envers les personnes différentes dont les personnes handicapées, il est très évident que beaucoup reste à faire pour mieux améliorer et renforcer le vivre-ensemble. 
+    <br> Quel quota est réservé dans d'autres concours aux personnes handicapées qui ne peuvent pas participer à certains concours publics tout simplement parce que l'éducation physique est une obligation? <br>  
+    
+        Il est difficile de dire exactement des chiffres illustratifs mais l'indifférence de la société est flagrante et inquiétante. Si bien que même sans chiffres, de par les comportements et les agissements envers les personnes différentes dont les personnes handicapées, il est très évident que beaucoup reste à faire pour mieux améliorer et renforcer le vivre-ensemble. 
   </p>
     <hr style="color: rgb(13, 31, 136); justify-self: center;"> 
 
