--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <link rel="stylesheets" type="text/css" href="_css/style.css_" media="all">
     <link rel="stylesheets" href="flexbox" media="all">
     <link rel="javascript" type="text/javascript" href="js.main" media="all">
-    @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <style> 
 
 *{box-sizing: border-box;
