--- a/index.html
+++ b/index.html
@@ -998,13 +998,13 @@ height: auto;
 
 .HLTHY{
   display: grid;
-  grid-template-rows: 0.5fr 0.35fr;
+  grid-template-rows: 0.5fr 0.5fr;
     background: #fff;
     justify-items: center;
-    justify-content: center;
+    justify-content: space-between;
     text-align: justify;
     width: 74%;
-    height: 875px;
+    height: 885px;
     font-size: 17.5px; 
     color: rgba(11, 11, 11, 0.983);
     line-height: 30px;
