--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@ height: auto;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 240px;
+  height: auto;
   font-size: 17.5px; 
   color: rgba(11, 11, 11, 0.983);
   line-height: 30px;
