--- a/index.html
+++ b/index.html
@@ -1535,7 +1535,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 
   <div class="Noel">
     <div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 25px; color:rgba(0, 0, 139, 0.639)">
-      Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki a organisé cet arbre de Noël pendant lequel
+      Noël est une célébration généralement adorée par de nombreux d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs réponses respectives. 
     </div>
@@ -1906,24 +1906,24 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       
                       <br>
                     
-                        La vision de Tiki N'Yiki a pour promoteur Gabriel lui-même étant une personne à mobilité réduite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
+                        La vision de Tiki N'Yiki a pour promoteur Gabriel, une personne à mobilité réduite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
                       Fervent défenseur des droits de personnes handicapées, il s'est engagé et a travaillé dans plusieurs associations pour l'éducation,
                        la promotion et la défense des personnes handicapées dont les enfants. 
                        <br>
-                       </a> Il y a enseigné des enfants handicapés et orphelins, animé des séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale"
+                       </a> Il y a enseigné des enfants handicapés et orphelins de 2006 à 2014. En outre il a animé de multiples séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale"
                        <br>En outre pendant ses voyages en Europe il a donné des conférences en Suisse et en Allemagne sur l'association PAAS NEERE et son impact à travers les personnes handicapées de la localité.
                       <br>
                       <br>
-                      En 2006 il a été un des membres fondateurs de l'association PAAS NEERE.
+                      En 2005 Gabriel a été un des membres fondateurs de l'association PAAS NEERE.
                       <br>
-                      En 2012, Gabriel a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour sa contribution au développement et l'épanouissement des personnes handicapées de sa région.
+                      En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour sa contribution au développement et l'épanouissement des personnes handicapées de sa région.
                       <br>
                       En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le volet EDUCATION ont été interrompues mais vont être redéfinies si les conditions sont réunies. 
                       <br>
                       <br>
                       Présentement résident permanent Canadien, il se reconstruit une nouvelle vie. Entre autres, il apprend à écrire du code informatique tout en souhaitant se former pour mieux développer ce site web et présenter sa vision pour Tiki N'Yiki. 
                       <br>
-                      Néanmoins Gabriel veut créer une fondation dont le but est de supporter vigoureusement l'éducation et l'inclusion sociale des enfants handicapés car ce sera un moyen de leur créer des opportunités pour mieux s'intégrer dans leurs communautés respectives dans le futur <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
+                      Néanmoins Gabriel veut créer une fondation dont le but sera de supporter vigoureusement l'éducation et l'inclusion sociale des personnes handicapées afin de leur créer des opportunités pour qu'elles puissent mieux s'intégrer dans leurs communautés respectives <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
                      Gabriel est passionné de photographie, d'histoire, de géographie, d'architecture, de football (soccer) et de hockey sur glace.
                     </p>      
       </div>
