--- a/index.html
+++ b/index.html
@@ -1633,7 +1633,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
      </b>
     </div>
 
-    <div class="k1" style="border-top: 0.16rem solid #000;">
+    <div class="k1" style="border-top: 0.12rem solid #242424f2; margin-top: 4px;">
       <a href="https://www.visionmondiale.ca/blog/education/pourquoi-leducation-est-elle-importante" target="_blank">
       <div class="student">
         <div>
