--- a/index.html
+++ b/index.html
@@ -1730,8 +1730,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </span>
     
         <p>
-          <br>La santé est un droit universel et doit être accessible à tout le monde. Par ailleurs avec l'augmentation de la population mondiale et de l'espérance de vie facilitée par les prouesses de la médécine, le fonctionnement des systèmes de santé est confronté à divers challenges y compris la durée des délais d'attente pour un rendez-vous chirurgical ou autres soins quelconques et par conséquent est sous pression. Les urgences craquent les salles. 
-          Parmi les raisons on a d'une part le manque de main d'oeuvre qualifiée dans l'hémisphère Nord et d'autre part le manque d'infrastructures et d'équipements dans l'hémisphère Sud. Si bien que les services publics de santé sont débordés et certains patients doivent attendre pendant des mois voire des années pour des rendez-vous de chirurgie. 
+          <br>La santé est un droit universel et doit être accessible à tout le monde. Par ailleurs avec l'augmentation de la population mondiale et de l'espérance de vie facilitée par les prouesses de la médécine, le fonctionnement des systèmes de santé est confronté à divers challenges et se retrouve sous forte pression. Les urgences bondent les salles d'attente. 
+          Parmi les raisons on a d'une part le manque de main d'oeuvre qualifiée dans l'hémisphère Nord et d'autre part le manque d'infrastructures et d'équipements dans l'hémisphère Sud. 
           <br>
           <br>
           Il y a de plus en plus de patients qui se tournent vers le privé. Alors que privé rime avec pas mal assez de moyens financiers. Mais comment les personnes sans ou à faibles revenus pourront-elles accéder aux soins médicaux en cas de maladie ? Surtout quand la santé tend à devenir une affaire d'argent et que certaines personnes handicapées n'ont pas un grand pouvoir d'achat ? 
