--- a/index.html
+++ b/index.html
@@ -1759,7 +1759,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Emergency Montreal Hospital">
     <figure>
       <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-        Centre Hospitalier Régional de Ziniaré
+        Centre Hospitalier Régional
         </figcaption>
 </figure>
 
