--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,9 @@ function myFunction() {
         Le Burkina Faso ou pays des hommes intègres est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de :
         <br>
         <br>
-        <em style="color: orangered">274.220 kilomètres carrés <a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" target="_blank">[Sources: Données 2020 de la Banque Mondiale] </a>avec une population approximativement égale à 23.300.000 habitants <a href="https://www.unfpa.org/data/world-population/BF" target="_blank"> [Sources: UNFPA]</a>. Il partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.  
+        <em style="color: orangered">274.220 kilomètres carrés <a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" target="_blank">[Sources: Données 2020 de la Banque Mondiale] </a>avec une population approximativement égale à 23.300.000 habitants <a href="https://www.unfpa.org/data/world-population/BF" target="_blank"> [Sources: UNFPA]</a>. 
+          <br>
+          Il partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.  
         </em>  
         <br>
         Il bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage.
@@ -1449,7 +1451,7 @@ function myFunction() {
 Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barrières afin que toute personne handicapée puisse être mieux inclue, son droit respecté et sa vie facilitée sur un processus progressif et positif plûtot que la peur et les discriminations vécues par un grand nombre. 
 <br>
 <br>
-<em style="color:rgba(255, 1, 1, 0.996); font-size: 18px;">Les enfants handicapés doivent être bien encadrés pour qu'ils puissent avoir des opportunités dans le futur.</em>
+<em style="color:rgba(255, 1, 1, 0.996); font-size: 18px;">Les enfants handicapés doivent être bien promus pour qu'ils puissent avoir des opportunités.</em>
         </p>
       </div> 
 
