--- a/index.html
+++ b/index.html
@@ -1568,7 +1568,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
          pour ces enfants handicapés qui risquent de faire face à une suppression de leurs propres droits par leurs propres parents.  
         <br>
         <hr style="color: rgba(239, 54, 7, 0.977); justify-self: center;"> 
-        <b style="color:rgba(239, 54, 7, 0.977); font-size: 23px; font-family: georgia;"> Construction de l'Accadémie Tiki N'Yiki</b> 
+        <b style="color:rgba(239, 54, 7, 0.977); font-size: 23px; font-family: georgia;">Accadémie Tiki N'Yiki</b> 
         <br>  
         Il est inimaginable de voir que de personnes handicapées ne soient pas à mesure de partir à l'hôpital quand elles tombent malades, aller étudier, partir au marché, aller au culte ou simplement sortir marcher à cause du manque de moyens de déplacement (transport). 
         <br>  
