--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 
   <div class="Noel">
     <div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 25px; color:rgba(0, 0, 139, 0.639)">
-      Noël est une célébration généralement adorée par de nombreux d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël pendant lequel
+      Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs réponses respectives. 
     </div>
