--- a/index.html
+++ b/index.html
@@ -1451,7 +1451,7 @@ function myFunction() {
 Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barrières afin que toute personne handicapée puisse être mieux inclue, son droit respecté et sa vie facilitée sur un processus progressif et positif plûtot que la peur et les discriminations vécues par un grand nombre. 
 <br>
 <br>
-<em style="color:rgba(255, 1, 1, 0.996); font-size: 18px;">Les enfants handicapés doivent être bien promus pour qu'ils puissent avoir des opportunités.</em>
+<em style="color:rgba(255, 1, 1, 0.996); font-size: 18px;">Les personnes handicapées doivent être mieux promues pour qu'elles puissent avoir des opportunités.</em>
         </p>
       </div> 
 
