--- a/index.html
+++ b/index.html
@@ -1394,13 +1394,13 @@ function myFunction() {
           Il partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.  
         </em>  
         <br>
-        Il bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage.
+        Le Burkina Faso bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage.
         Heureusement elle se diversifie à travers d'autres secteurs comme les services et le secteur des nouvelles technologies.  
         <br> 
         Par ailleurs son économie reste fortement impactée par une crise sécuritaire qui sécoue la sous-région y compris le Mali et le Niger dont il partage des frontières communes et le tout dans une réalité d'inflation globale. Ce qui rend incertain les lendemains pour de nombreux Burkinabès surtout les déplacés internes.     
         <br>  
         <br>     
-        Malgré une population croissante d'à peu près 2 millions de personnes handicapées causées soit par la poliomyétlie (Polio), soit par d'autres maladies, soit par la vieillesse ou soit par de quelconques accidents, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
+        Malgré une population croissante approximant 2 millions de personnes handicapées, séquelles de la poliomyétlie (Polio), de maladies, de vieillesse et/ou de quelconques accidents, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
         <br> 
         <br> 
         Ceci n'est pas seulement un fait causé par une culture toxique d'exclusion dûe aux discriminations et barrières sociales,
@@ -1444,8 +1444,9 @@ function myFunction() {
         <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'acceptation et d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré la différence mais en jouissant de leurs droits.
          
          <br>
-         En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe. <a href="https://lepays.bf/personnes-handicapees-au-burkina-avec-eux-nous-avons-parle-exclusion-discrimination-frustration-sexe/" target="_blank">Les fréquentes discriminations et l'exclusion les rongent au quotidien</a>. Alors si elles vivent exclues de la société comme une île au milieu d'un océan très loin de la terre ferme sans aucune connection, il leur sera difficile de rencontrer des opportunités afin de réaliser. 
-         Le fait que des gens qui devraient être les premiers à être soutenus, se retrouvent complètement oubliés et relégués aux rangs derniers, est non seulement horrible mais indique l'état des mentalités et l'environnement exclusif vis-à-vis de la différence. 
+         En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe. <a href="https://lepays.bf/personnes-handicapees-au-burkina-avec-eux-nous-avons-parle-exclusion-discrimination-frustration-sexe/" target="_blank">Les fréquentes discriminations et l'exclusion les rongent au quotidien</a>. 
+         Alors si elles vivent exclues de la société comme une île au milieu d'un océan très loin de la terre ferme sans aucune connection, il leur sera difficile de rencontrer des opportunités afin de se réaliser. 
+         Le fait que des gens qui devraient être les premiers à être soutenus, se retrouvent complètement oubliés et relégués aux derniers rangs, est non seulement horrible mais indique l'état des mentalités et l'environnement exclusif vis-à-vis de la différence. 
 <br>
 <br>
 Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barrières afin que toute personne handicapée puisse être mieux inclue, son droit respecté et sa vie facilitée sur un processus progressif et positif plûtot que la peur et les discriminations vécues par un grand nombre. 
